# rknazo-2024

./: Dockerfile  README.md
challenges/1/: buildinfo.py  readme.md
challenges/1/src/: flag.txt
challenges/2/: buildinfo.py  flag.txt  readme.md
challenges/3/: buildinfo.py  readme.md
challenges/3/src/: challenge.c
challenges/4/: buildinfo.py  hint.txt  readme.md
challenges/5/: buildinfo.py  readme.md
challenges/5/src/: challenge.c  obfuscate.h
challenges/6/: buildinfo.py  readme.md
challenges/6/daemon/: Cargo.toml
challenges/6/daemon/src/: main.rs
challenges/7/: buildinfo.py  readme.md
challenges/7/daemon/src/: main.rs
challenges/8/: buildinfo.py  readme.md
challenges/8/daemon/: Cargo.toml
challenges/8/daemon/src/: main.rs
data/: magic.txt  result.txt
solver/: __main__.py  context.py  flag.py
